# site24x7-cli-ai-agent

./: .dockerignore  AWS_DEPLOYMENT.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_TROUBLESHOOT.md  Dockerfile  Dockerfile.minimal  Dockerfile.no-network  GITHUB_WEBHOOK_SETUP.md  LOCAL_DEPLOYMENT_GUIDE.md  README.md  REQUIREMENTS.md  SETUP_SUMMARY.md  UNINSTALL.md  aws-deploy.sh  config.py  database.py  debug-deploy.sh  deploy.sh  docker-compose.minimal.yml  docker-compose.no-network.yml  docker-compose.yml  docker-troubleshoot.sh  fixed-local-deploy.sh  mac-deploy.sh  main.py  network-deploy.sh  network-free-deploy.sh  proxy-deploy.sh  pyproject.toml  quick-deploy.sh  replit.md  setup_local.py  simple-deploy.sh  ultra-minimal-deploy.sh  upload_to_github.py
attached_assets/: Pasted--ERROR-3-7-RUN-apt-get-update-apt-get-install-y-git-curl-rm-rf-var-lib-apt--1753329141817_1753329141818.txt  Pasted--File-app-services-scheduler-py-line-29-in-init-self-github-manager-GitHubManager--1753466848677_1753466848677.txt  Pasted--Site24x7-CLI-AI-Agent-Corporate-Network-Deploy--1753330038975_1753330038975.txt  Pasted--Site24x7-CLI-AI-Agent-Ultra-Minimal-Deploy--1753330247766_1753330247767.txt  Pasted--Using-Docker-deployment-Building-Docker-image-Building-8-2s-7-12--1753464619278_1753464619280.txt  Pasted--base-pragad-8250-pragad-8250-site24x7-cli-ai-agent-mac-deploy-sh-Site24x7-CLI-AI-Agent-Ma-1753466132700_1753466132701.txt  Pasted-Test-attempt-1-5-Container-status-restarting-Container-not-running-checking-logs-site24x7-cl-1753330526871_1753330526872.txt  (+1 more)
cli_templates/: setup.py.j2  (+3 more)
(+18 files in other folders)
