[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pygithub>=2.6.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
